Added a simple assessment to the components example

--- a/documentation/examples/SimpleComponentsExample/SimpleComponentsExample/SimpleComponentsExample.csproj
+++ b/documentation/examples/SimpleComponentsExample/SimpleComponentsExample/SimpleComponentsExample.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Beam_HE200A.cs" />
+    <Compile Include="SimpleAssessmentExample.cs" />
     <Compile Include="SimpleDesignerExample.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimpleDesignerExample_Component.cs" />
