Added Grasshopper component for simple assessment to the simple components example

--- a/documentation/examples/SimpleComponentsExample/SimpleComponentsExample/SimpleComponentsExample.csproj
+++ b/documentation/examples/SimpleComponentsExample/SimpleComponentsExample/SimpleComponentsExample.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="Beam_HE200A.cs" />
     <Compile Include="SimpleAssessmentExample.cs" />
+    <Compile Include="SimpleAssessmentExample_Component.cs" />
     <Compile Include="SimpleDesignerExample.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimpleDesignerExample_Component.cs" />
