Added first steps for an example with inputs

--- a/documentation/examples/SimpleComponentsExample/ComponentsWithInputExample/ComponentsWithInputExample.csproj
+++ b/documentation/examples/SimpleComponentsExample/ComponentsWithInputExample/ComponentsWithInputExample.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{A225E1D2-15C6-4E90-BD09-D22388615608}</ProjectGuid>
+    <ProjectGuid>{EE998E1C-6CAD-4F57-9A5D-13279CBE75B3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SimpleComponentsExample</RootNamespace>
-    <AssemblyName>SimpleComponentsExample</AssemblyName>
+    <RootNamespace>ComponentsWithInputExample</RootNamespace>
+    <AssemblyName>ComponentsWithInputExample</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -43,8 +43,7 @@
       <HintPath>C:\Program Files (x86)\Grasshopper for Rhino 5\rh_common\RhinoCommon.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="SustainabilityOpen, Version=0.0.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="SustainabilityOpen">
       <HintPath>C:\so\SustainabilityOpen.dll</HintPath>
       <Private>False</Private>
     </Reference>
@@ -57,12 +56,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Beam_HE200A.cs" />
-    <Compile Include="SimpleAssessmentExample.cs" />
-    <Compile Include="SimpleAssessmentExample_Component.cs" />
-    <Compile Include="SimpleDesignerExample.cs" />
+    <Compile Include="Beam_HE300A.cs" />
+    <Compile Include="DesignerWithInputExample.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SimpleDesignerExample_Component.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
