--- a/documentation/examples/SimpleComponentsExample/ComponentsWithInputExample/ComponentsWithInputExample.csproj
+++ b/documentation/examples/SimpleComponentsExample/ComponentsWithInputExample/ComponentsWithInputExample.csproj
@@ -47,6 +47,10 @@
       <HintPath>C:\so\SustainabilityOpen.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="SustainabilityOpen.Grasshopper">
+      <HintPath>..\..\..\..\..\..\so\SustainabilityOpen.Grasshopper.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
