--- a/src/SustainabilityOpen/SustainabilityOpen.QTO.Grasshopper/SustainabilityOpen.QTO.Grasshopper.csproj
+++ b/src/SustainabilityOpen/SustainabilityOpen.QTO.Grasshopper/SustainabilityOpen.QTO.Grasshopper.csproj
@@ -31,6 +31,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="GH_IO">
+      <HintPath>..\..\..\..\..\Program Files (x86)\Grasshopper for Rhino 5\GH_IO.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Grasshopper">
+      <HintPath>..\..\..\..\..\Program Files (x86)\Grasshopper for Rhino 5\Grasshopper.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="RhinoCommon">
+      <HintPath>..\..\..\..\..\Program Files (x86)\Grasshopper for Rhino 5\rh_common\RhinoCommon.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,8 +53,30 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QTOAnalysis_Component.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\extras\SustainabilityOpen.QTO\SustainabilityOpen.QTO.csproj">
+      <Project>{13DC3EDA-E088-4103-9308-BD724FA6B49F}</Project>
+      <Name>SustainabilityOpen.QTO</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\grasshopper\SustainabilityOpen.Grasshopper\SustainabilityOpen.Grasshopper.csproj">
+      <Project>{F4893C26-BBDD-4A3E-8C89-D739C192CA8A}</Project>
+      <Name>SustainabilityOpen.Grasshopper</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SustainabilityOpen\SustainabilityOpen.csproj">
+      <Project>{1504942A-7FA2-4787-9132-01577B0940F5}</Project>
+      <Name>SustainabilityOpen</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>Copy "$(TargetPath)" "$(TargetDir)\$(ProjectName).gha"
+Copy "$(TargetDir)\$(ProjectName).gha" "c:\so\"</PostBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PreBuildEvent>Del "c:\so\SustainabilityOpen.QTO.Grasshopper.gha"</PreBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
