--- a/src/extras/SustainabilityOpen.QTO/SustainabilityOpen.QTO.csproj
+++ b/src/extras/SustainabilityOpen.QTO/SustainabilityOpen.QTO.csproj
@@ -41,8 +41,21 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QTOAnalysis.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\SustainabilityOpen\SustainabilityOpen\SustainabilityOpen.csproj">
+      <Project>{1504942A-7FA2-4787-9132-01577B0940F5}</Project>
+      <Name>SustainabilityOpen</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>Copy "$(TargetDir)\$(ProjectName).dll" "c:\so\"</PostBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PreBuildEvent>Del "c:\so\SustainabilityOpen.QTO.dll"</PreBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
