--- a/src/grasshopper/SustainabilityOpen.Grasshopper/SustainabilityOpen.Grasshopper.csproj
+++ b/src/grasshopper/SustainabilityOpen.Grasshopper/SustainabilityOpen.Grasshopper.csproj
@@ -31,6 +31,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="GH_IO">
+      <HintPath>..\..\..\..\..\Program Files (x86)\Grasshopper for Rhino 5\GH_IO.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Grasshopper">
+      <HintPath>..\..\..\..\..\Program Files (x86)\Grasshopper for Rhino 5\Grasshopper.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="RhinoCommon">
+      <HintPath>..\..\..\..\..\Program Files (x86)\Grasshopper for Rhino 5\rh_common\RhinoCommon.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,8 +53,30 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SOAnalysis_Component.cs" />
+    <Compile Include="SOAnalysis_GHData.cs" />
+    <Compile Include="SOAnalysis_GHParam.cs" />
+    <Compile Include="SOAssessment_Component.cs" />
+    <Compile Include="SOAssessment_GHData.cs" />
+    <Compile Include="SOAssessment_GHParam.cs" />
+    <Compile Include="SODesigner_Component.cs" />
+    <Compile Include="SODesigner_GHData.cs" />
+    <Compile Include="SODesigner_GHParam.cs" />
+    <Compile Include="SustainabilityOpenFramework.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\SustainabilityOpen\SustainabilityOpen\SustainabilityOpen.csproj">
+      <Project>{1504942A-7FA2-4787-9132-01577B0940F5}</Project>
+      <Name>SustainabilityOpen</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>Copy "$(TargetDir)\$(ProjectName).dll" "c:\so\"</PostBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PreBuildEvent>Del "c:\so\SustainabilityOpen.Grasshopper.dll"</PreBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
