Moved design objects into a Design directory and modified namespace of SOMaterial

--- a/src/SustainabilityOpen/SustainabilityOpen/SustainabilityOpen.csproj
+++ b/src/SustainabilityOpen/SustainabilityOpen/SustainabilityOpen.csproj
@@ -46,9 +46,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Framework\SOBase.cs" />
     <Compile Include="Framework\SODesigner.cs" />
-    <Compile Include="Framework\SOMaterial.cs" />
-    <Compile Include="Framework\SOMaterialQuantity.cs" />
-    <Compile Include="Framework\SOPhysicalObject.cs" />
+    <Compile Include="Framework\Design\SOMaterial.cs" />
+    <Compile Include="Framework\Design\SOMaterialQuantity.cs" />
+    <Compile Include="Framework\Design\SOPhysicalObject.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
