--- a/src/SustainabilityOpen/SustainabilityOpen/SustainabilityOpen.csproj
+++ b/src/SustainabilityOpen/SustainabilityOpen/SustainabilityOpen.csproj
@@ -52,7 +52,8 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <None Include="_design\FrameworkDesign.cd" />
+    <None Include="_design\Design.cd" />
+    <None Include="_design\Framework.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
