Added (failing) test for SOController class Instance property

--- a/documentation/examples/ComponentsWithInputExample/ComponentsWithInputExample.csproj
+++ b/documentation/examples/ComponentsWithInputExample/ComponentsWithInputExample.csproj
@@ -47,10 +47,6 @@
       <HintPath>C:\so\SustainabilityOpen.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="SustainabilityOpen.Grasshopper">
-      <HintPath>..\..\..\..\..\..\so\SustainabilityOpen.Grasshopper.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -63,6 +59,12 @@
     <Compile Include="Beam_HE300A.cs" />
     <Compile Include="DesignerWithInputExample.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\src\grasshopper\SustainabilityOpen.Grasshopper\SustainabilityOpen.Grasshopper.csproj">
+      <Project>{F4893C26-BBDD-4A3E-8C89-D739C192CA8A}</Project>
+      <Name>SustainabilityOpen.Grasshopper</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
