--- a/documentation/examples/SimpleComponentsExample/SimpleComponentsExample.csproj
+++ b/documentation/examples/SimpleComponentsExample/SimpleComponentsExample.csproj
@@ -57,12 +57,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Beam_HE200A.cs" />
-    <Compile Include="SimpleAssessmentExample.cs" />
-    <Compile Include="SimpleAssessmentExample_Component.cs" />
-    <Compile Include="SimpleDesignerExample.cs" />
+    <Compile Include="so\Beam_HE200A.cs" />
+    <Compile Include="so\SimpleAssessmentExample.cs" />
+    <Compile Include="Grasshopper\SimpleAssessmentExample_Component.cs" />
+    <Compile Include="so\SimpleDesignerExample.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SimpleDesignerExample_Component.cs" />
+    <Compile Include="Grasshopper\SimpleDesignerExample_Component.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\extras\SustainabilityOpen.QTO\SustainabilityOpen.QTO.csproj">
