--- a/src/SustainabilityOpen/SustainabilityOpen/SustainabilityOpen.csproj
+++ b/src/SustainabilityOpen/SustainabilityOpen/SustainabilityOpen.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Framework\SOAssessment.cs" />
     <Compile Include="Framework\SOController.cs" />
     <Compile Include="Framework\SOFramework.cs" />
+    <Compile Include="Helpers\Log.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Framework\SOBase.cs" />
     <Compile Include="Framework\SODesigner.cs" />
