--- a/src/SustainabilityOpen/SustainabilityOpen/SustainabilityOpen.csproj
+++ b/src/SustainabilityOpen/SustainabilityOpen/SustainabilityOpen.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Framework\Design\SODesign.cs" />
     <Compile Include="Framework\SOAnalysis.cs" />
     <Compile Include="Framework\SOAssessment.cs" />
     <Compile Include="Framework\SOComponent.cs" />
@@ -53,9 +54,7 @@
     <Compile Include="Framework\Design\SOMaterialQuantity.cs" />
     <Compile Include="Framework\Design\SOPhysicalObject.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Framework\Design\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="_design\Design.cd" />
     <None Include="_design\Framework.cd" />
