--- a/src/SustainabilityOpen/SustainabilityOpen/SustainabilityOpen.csproj
+++ b/src/SustainabilityOpen/SustainabilityOpen/SustainabilityOpen.csproj
@@ -43,7 +43,7 @@
     <Compile Include="Framework\Design\SODesign.cs" />
     <Compile Include="Framework\SOAnalysis.cs" />
     <Compile Include="Framework\SOAssessment.cs" />
-    <Compile Include="Framework\SOComponent.cs" />
+    <Compile Include="Framework\SOParametricComponent.cs" />
     <Compile Include="Framework\SOController.cs" />
     <Compile Include="Framework\SOFramework.cs" />
     <Compile Include="Helpers\Log.cs" />
