Added SOComponent and SOComponentTests with API test

--- a/src/SustainabilityOpen/SustainabilityOpen/SustainabilityOpen.csproj
+++ b/src/SustainabilityOpen/SustainabilityOpen/SustainabilityOpen.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Framework\Design\SOComponent.cs" />
     <Compile Include="Framework\Design\SODesign.cs" />
     <Compile Include="Framework\Design\SODesignAlternative.cs" />
     <Compile Include="Framework\SOAnalysis.cs" />
