--- a/src/SustainabilityOpen/SustainabilityOpen/SustainabilityOpen.csproj
+++ b/src/SustainabilityOpen/SustainabilityOpen/SustainabilityOpen.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Framework\Design\SOComponent.cs" />
     <Compile Include="Framework\Design\SODesign.cs" />
     <Compile Include="Framework\Design\SODesignAlternative.cs" />
+    <Compile Include="Framework\Design\SOPart.cs" />
     <Compile Include="Framework\SOAnalysis.cs" />
     <Compile Include="Framework\SOAssessment.cs" />
     <Compile Include="Framework\SOParametricComponent.cs" />
