--- a/documentation/examples/ComponentsWithInputExample/ComponentsWithInputExample.csproj
+++ b/documentation/examples/ComponentsWithInputExample/ComponentsWithInputExample.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Grasshopper\DesignerWithInputExample_Component.cs" />
     <Compile Include="so\Beam_HE300A.cs" />
     <Compile Include="so\DesignerWithInputExample.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -66,9 +67,7 @@
       <Name>SustainabilityOpen.Grasshopper</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Grasshopper\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>Copy "$(TargetPath)" "$(TargetDir)\$(ProjectName).gha"
